[package]
name = "barter_project"
version = "0.1.0"
edition = "2021"

[dependencies]
barter = "0.10.0"
barter-data = "0.10.0"
barter-execution = "0.5.0"
barter-instrument = "0.3.0"
barter-integration = "0.9.0"
chrono = "0.4.40"
fnv = "1.0.7"
futures = "0.3.31"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde_json = "1.0.140"
tokio = "1.44.0"
tracing = "0.1.41"
vnc = "0.4.0"

